[package]
name = "py-netcode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "netcode"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["gil-refs"] }
netcode-rs = { git = "https://github.com/benjamin-kirkbride/netcode-rs.git"}
