[package]
name = "py-netcode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_netcode"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["gil-refs"] }
pyo3-log = "0.11.0"
netcode-rs = { path = "../netcode-rs" }
log = { version = "0.4.22" }
